Fix backdrop to backtracking

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <br>
         <label for="strategy">Strategy: </label>
         <select id="strategy" name="strategy" type="number">
-            <option value="backdrop">Backdrop</option>
+            <option value="backtracking">Backtracking</option>
             <option value="repair">Iterative Repair</option>
         </select>
         <br>
@@ -27,7 +27,7 @@
         <p>Iterations: <span id="iterations">0</span></p>
     </div>
     <div id="board"></div>
-    <script src="js/backdrop.js"></script>
+    <script src="js/backtracking.js"></script>
     <script src="js/repair.js"></script>
     <script src="js/main.js"></script>
 </body>
